--- a/Курсовая/index.html
+++ b/Курсовая/index.html
@@ -353,32 +353,67 @@
       <h2 class="editions__title h2">Издания</h2>
       <div class="editions__content">
         <div class="editions__ledt-column">
-          <div class="checkbox">
+          <div class="checkbox__list">
             <h3 class="checkbox__title">Категории</h3>
-            <label class="label-check"><input type="checkbox" class="check" checked>Бестселлеры
-            <span></span></label>
-            <label class="label-check"><input type="checkbox" class="check">Искусство
-            <span></span></label>
-            <label class="label-check"><input type="checkbox" class="check">Архитектура
-            <span></span></label>
-            <label class="label-check"><input type="checkbox" class="check">Дизайн
-            <span></span></label>
-            <label class="label-check"><input type="checkbox" class="check">Мода
-            <span></span></label>
-            <label class="label-check"><input type="checkbox" class="check">Детям
-            <span></span></label>
-            <label class="label-check"><input type="checkbox" class="check">Художественная литература
-            <span></span></label>
-            <label class="label-check"><input type="checkbox" class="check">Публицистика
-            <span></span></label>
-            <label class="label-check"><input type="checkbox" class="check">Путеводители
-            <span></span></label>
-            <label class="label-check"><input type="checkbox" class="check">Философия
-            <span></span></label>
-            <label class="label-check"><input type="checkbox" class="check">Учебная литература
-            <span></span></label>
-            <label class="label-check"><input type="checkbox" class="check">Журналы и газеты
-            <span></span></label>
+            <div class="checkbox">
+              <input class="checkbox__input" id="check-1" type="checkbox" checked>
+              <label class="checkbox__label" for="check-1">Бестселлеры</label>
+            </div>
+
+            <div class="checkbox">
+              <input class="checkbox__input" id="check-2" type="checkbox">
+              <label class="checkbox__label" for="check-2">Искусство</label>
+            </div>
+
+            <div class="checkbox">
+              <input class="checkbox__input" id="check-3" type="checkbox">
+              <label class="checkbox__label" for="check-3">Архитектура</label>
+            </div>
+
+            <div class="checkbox">
+              <input class="checkbox__input" id="check-4" type="checkbox">
+              <label class="checkbox__label" for="check-4">Дизайн</label>
+            </div>
+
+            <div class="checkbox">
+              <input class="checkbox__input" id="check-5" type="checkbox">
+              <label class="checkbox__label" for="check-5">Мода</label>
+            </div>
+
+            <div class="checkbox">
+              <input class="checkbox__input" id="check-6" type="checkbox">
+              <label class="checkbox__label" for="check-6">Детям</label>
+            </div>
+
+            <div class="checkbox">
+              <input class="checkbox__input" id="check-7" type="checkbox">
+              <label class="checkbox__label" for="check-7">Художественная литература</label>
+            </div>
+
+            <div class="checkbox">
+              <input class="checkbox__input" id="check-8" type="checkbox">
+              <label class="checkbox__label" for="check-8">Публицистика</label>
+            </div>
+
+            <div class="checkbox">
+              <input class="checkbox__input" id="check-9" type="checkbox">
+              <label class="checkbox__label" for="check-9">Путеводители</label>
+            </div>
+
+            <div class="checkbox">
+              <input class="checkbox__input" id="check-10" type="checkbox">
+              <label class="checkbox__label" for="check-10">Философия</label>
+            </div>
+
+            <div class="checkbox">
+              <input class="checkbox__input" id="check-11" type="checkbox">
+              <label class="checkbox__label" for="check-11">Учебная литература</label>
+            </div>
+
+            <div class="checkbox">
+              <input class="checkbox__input" id="check-12" type="checkbox">
+              <label class="checkbox__label" for="check-12">Журналы и газеты</label>
+            </div>
           </div>
           <div class="price">
             <span class="price_title">Цена</span>
