--- a/Курсовая/index.html
+++ b/Курсовая/index.html
@@ -47,7 +47,7 @@
         <div class="header__second container">
           <ul class="menu-second__list menu__list">
             <li class="menu-second__item">
-              <button class="second__btn"  onclick="myFunction(this ,'#scroll-1')">Реализм<svg width="12" height="11" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <button class="second__btn" name="scroll-1">Реализм<svg width="12" height="11" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M11 5L6 10L0.999998 5" stroke="white"/>
                 </svg></button>
               <div class="customScroll" id="scroll-1" data-simplebar>
@@ -65,7 +65,7 @@
               </div>
             </li>
             <li class="menu-second__item">
-              <button class="second__btn" onclick="myFunction(this ,'#scroll-2')">Импрессионизм<svg width="12" height="11" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <button class="second__btn" name="scroll-2">Импрессионизм<svg width="12" height="11" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M11 5L6 10L0.999998 5" stroke="white"/>
                 </svg></button>
               <div class="customScroll" id="scroll-2" data-simplebar>
@@ -83,7 +83,7 @@
               </div>
             </li>
             <li class="menu-second__item">
-              <button class="second__btn" onclick="myFunction(this ,'#scroll-3')">Постимпрессионизм<svg width="12" height="11" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <button class="second__btn" name="scroll-3">Постимпрессионизм<svg width="12" height="11" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M11 5L6 10L0.999998 5" stroke="white"/>
                 </svg></button>
               <div class="customScroll" id="scroll-3" data-simplebar>
@@ -101,7 +101,7 @@
               </div>
             </li>
             <li class="menu-second__item">
-              <button class="second__btn" onclick="myFunction(this ,'#scroll-4')">Авангард<svg width="12" height="11" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <button class="second__btn" name="scroll-4">Авангард<svg width="12" height="11" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M11 5L6 10L0.999998 5" stroke="white"/>
                 </svg></button>
               <div class="customScroll" id="scroll-4" data-simplebar>
@@ -119,7 +119,7 @@
               </div>
             </li>
             <li class="menu-second__item">
-              <button class="second__btn" onclick="myFunction(this ,'#scroll-5')">Футуризм<svg width="12" height="11" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <button class="second__btn" name="scroll-5">Футуризм<svg width="12" height="11" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M11 5L6 10L0.999998 5" stroke="white"/>
                 </svg></button>
               <div class="customScroll" id="scroll-5" data-simplebar>
@@ -165,7 +165,6 @@
 
   <a id="about"></a>
   <section class="about container">
-
     <h2 class="about__title h2">О нас</h2>
     <p class="about__desc">Ясность нашей позиции очевидна: семантический разбор внешних противодействий однозначно определяет каждого участника как способного принимать собственные решения касаемо распределения внутренних резервов и ресурсов. Не следует, однако, забывать, что высококачественный прототип будущего проекта влечет за собой процесс внедрения и модернизации модели развития. Повседневная практика показывает, что высокое качество позиционных исследований создаёт необходимость включения в производственный план целого ряда внеочередных мероприятий с учётом комплекса распределения внутренних резервов и ресурсов. В рамках спецификации современных стандартов, действия представителей оппозиции набирают популярность среди определенных слоев населения, а значит, должны быть разоблачены.</p>
   </section>
@@ -204,10 +203,10 @@
           <img class="swiper-slide slide-img" src="img/gallery/2-2.webp" alt="">
           <img class="swiper-slide slide-img" src="img/gallery/2-3.webp" alt="">
           <img class="swiper-slide slide-img" src="img/gallery/2-4.webp" alt="">
-          <img class="swiper-slide slide-img" src="img/gallery/2-5.jpg" alt="">
-          <img class="swiper-slide slide-img" src="img/gallery/2-6.jpg" alt="">
-          <img class="swiper-slide slide-img" src="img/gallery/3-1.jpg" alt="">
-          <img class="swiper-slide slide-img" src="img/gallery/3-2.jpg" alt="">
+          <img class="swiper-slide slide-img" src="img/gallery/2-5.webp" alt="">
+          <img class="swiper-slide slide-img" src="img/gallery/2-6.webp" alt="">
+          <img class="swiper-slide slide-img" src="img/gallery/3-1.webp" alt="">
+          <img class="swiper-slide slide-img" src="img/gallery/3-2.webp" alt="">
           <img class="swiper-slide slide-img" src="img/gallery/3-3.webp" alt="">
           <img class="swiper-slide slide-img" src="img/gallery/3-4.webp" alt="">
           <img class="swiper-slide slide-img" src="img/gallery/3-5.webp" alt="">
@@ -232,7 +231,7 @@
     <p class="catalog__desc">Акционеры крупнейших компаний, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут объявлены нарушающими общечеловеческие нормы этики и морали. Являясь всего лишь частью общей картины, стремящиеся вытеснить традиционное производство, нанотехнологии и по сей день остаются уделом либералов, которые жаждут быть функционально разнесены на независимые элементы. </p>
     <div class="catalog__content">
       <div class="content__left">
-        <img class="left__img" src="img/catalog/left.jpg" alt="">
+        <img class="left__img" src="img/catalog/left.webp" alt="">
         <h3 class="left__title" >Доменико Гирландайо</h3>
         <div class="left__date">2 июня 1448 — 11 января 1494.</div>
         <p class="left__desc">
@@ -423,7 +422,7 @@
     <h2 class="events_title h2">События</h2>
     <div class="events__cards">
       <div class="card">
-        <img src="img/events/1.jpg" alt="" class="card_img">
+        <img src="img/events/1.webp" alt="" class="card_img">
         <div class="card__content">
           <div class="card__location">Музей им. Щусева</div>
           <div class="card__date">с 20 марта по 30 апреля</div>
@@ -434,7 +433,7 @@
       </div>
 
       <div class="card">
-        <img src="img/events/2.jpg" alt="" class="card_img">
+        <img src="img/events/2.webp" alt="" class="card_img">
         <div class="card__content">
           <div class="card__location">ММОМА</div>
           <div class="card__date">24 марта 19:00</div>
@@ -445,7 +444,7 @@
       </div>
 
       <div class="card">
-        <img src="img/events/3.jpg" alt="" class="card_img">
+        <img src="img/events/3.webp" alt="" class="card_img">
         <div class="card__content">
           <div class="card__location">Еврейский музей</div>
           <div class="card__date">с 31 марта по 21 апреля</div>
@@ -545,7 +544,7 @@
           </div>
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <img class="slide-img slide-img__editions" src="img/editions/1.jpg" alt="">
+              <img class="slide-img slide-img__editions" src="img/editions/1.webp" alt="">
               <div class="card__desc">
                 <div class="card__name">Искусство цвета</div>
                 <i class="card__cost">620 руб</i>
@@ -555,7 +554,7 @@
             </div>
 
             <div class="swiper-slide">
-              <img class="slide-img slide-img__editions" src="img/editions/2.jpg" alt="">
+              <img class="slide-img slide-img__editions" src="img/editions/2.webp" alt="">
               <div class="card__desc">
                 <div class="card__name">Типографика</div>
                 <i class="card__cost">2 450 руб</i>
@@ -565,7 +564,7 @@
             </div>
 
             <div class="swiper-slide">
-              <img class="slide-img slide-img__editions" src="img/editions/3.jpg" alt="">
+              <img class="slide-img slide-img__editions" src="img/editions/3.webp" alt="">
               <div class="card__desc">
                 <div class="card__name">Книга про буквы</div>
                 <i class="card__cost">2 200 руб</i>
@@ -575,7 +574,7 @@
             </div>
 
             <div class="swiper-slide">
-              <img class="slide-img slide-img__editions" src="img/editions/4.jpg" alt="">
+              <img class="slide-img slide-img__editions" src="img/editions/4.webp" alt="">
               <div class="card__desc">
                 <div class="card__name">Николай Ильин</div>
                 <i class="card__cost">1 100 руб</i>
@@ -585,7 +584,7 @@
             </div>
 
             <div class="swiper-slide">
-              <img class="slide-img slide-img__editions" src="img/editions/5.jpg" alt="">
+              <img class="slide-img slide-img__editions" src="img/editions/5.webp" alt="">
               <div class="card__desc">
                 <div class="card__name">Модульные сетки в граф...</div>
                 <i class="card__cost">1 450 руб</i>
@@ -595,7 +594,7 @@
             </div>
 
             <div class="swiper-slide">
-              <img class="slide-img slide-img__editions" src="img/editions/6.jpg" alt="">
+              <img class="slide-img slide-img__editions" src="img/editions/6.webp" alt="">
               <div class="card__desc">
                 <div class="card__name">Эволюция графических ст...</div>
                 <i class="card__cost">3200 руб</i>
@@ -605,7 +604,7 @@
             </div>
 
             <div class="swiper-slide">
-              <img class="slide-img slide-img__editions" src="img/editions/7.jpg" alt="">
+              <img class="slide-img slide-img__editions" src="img/editions/7.webp" alt="">
               <div class="editions__card__desc">
                 <div class="card__name">Искусство и визуальное в...</div>
                 <i class="card__cost">2 200 руб</i>
