--- a/Курсовая/index.html
+++ b/Курсовая/index.html
@@ -188,29 +188,65 @@
       <p class="gallery__desc">Вам предоставляется 10 бесплатных скачиваний. Для увеличения количества скачиваний <a class="link__transition" href="#">авторизуйтесь,</a> либо воспользуйтесь лицензией. </p>
       <div class="swiper-container__btn">
         <div class="swiper__nav">
-          <div class="swiper-button-prev-2 slide-btn-effect"></div>
-          <div class="swiper-pagination-2"></div>
-          <div class="swiper-button-next-2 slide-btn-effect"></div>
+          <div class="swiper-button-prev-1"></div>
+          <div class="swiper-pagination-1"></div>
+          <div class="swiper-button-next-1"></div>
         </div>
         <div class="swiper-wrapper">
-          <img class="swiper-slide slide-img" src="img/gallery/1-1.webp" alt="">
-          <img class="swiper-slide slide-img" src="img/gallery/1-2.webp" alt="">
-          <img class="swiper-slide slide-img" src="img/gallery/1-3.webp" alt="">
-          <img class="swiper-slide slide-img" src="img/gallery/1-4.webp" alt="">
-          <img class="swiper-slide slide-img" src="img/gallery/1-5.webp" alt="">
-          <img class="swiper-slide slide-img" src="img/gallery/1-6.webp" alt="">
-          <img class="swiper-slide slide-img" src="img/gallery/2-1.webp" alt="">
-          <img class="swiper-slide slide-img" src="img/gallery/2-2.webp" alt="">
-          <img class="swiper-slide slide-img" src="img/gallery/2-3.webp" alt="">
-          <img class="swiper-slide slide-img" src="img/gallery/2-4.webp" alt="">
-          <img class="swiper-slide slide-img" src="img/gallery/2-5.webp" alt="">
-          <img class="swiper-slide slide-img" src="img/gallery/2-6.webp" alt="">
-          <img class="swiper-slide slide-img" src="img/gallery/3-1.webp" alt="">
-          <img class="swiper-slide slide-img" src="img/gallery/3-2.webp" alt="">
-          <img class="swiper-slide slide-img" src="img/gallery/3-3.webp" alt="">
-          <img class="swiper-slide slide-img" src="img/gallery/3-4.webp" alt="">
-          <img class="swiper-slide slide-img" src="img/gallery/3-5.webp" alt="">
-          <img class="swiper-slide slide-img" src="img/gallery/3-6.webp" alt="">
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/1-1.webp" alt="">
+          </div>
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/1-2.webp" alt="">
+          </div>
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/1-3.webp" alt="">
+          </div>
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/1-4.webp" alt="">
+          </div>
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/1-5.webp" alt="">
+          </div>
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/1-6.webp" alt="">
+          </div>
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/2-1.webp" alt="">
+          </div>
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/2-2.webp" alt="">
+          </div>
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/2-3.webp" alt="">
+          </div>
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/2-4.webp" alt="">
+          </div>
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/2-5.webp" alt="">
+          </div>
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/2-6.webp" alt="">
+          </div>
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/3-1.webp" alt="">
+          </div>
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/3-2.webp" alt="">
+          </div>
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/3-3.webp" alt="">
+          </div>
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/3-4.webp" alt="">
+          </div>
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/3-5.webp" alt="">
+          </div>
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/3-6.webp" alt="">
+          </div>
         </div>
       </div>
     </div>
@@ -538,9 +574,9 @@
         </div>
         <div class="swiper-container__editions">
           <div class="swiper__nav">
-            <div class="swiper-button-prev-2 slide-btn-effect"></div>
-            <div class="swiper-pagination-2"></div>
-            <div class="swiper-button-next-2 slide-btn-effect"></div>
+            <div class="swiper-button-prev-1"></div>
+            <div class="swiper-pagination-1"></div>
+            <div class="swiper-button-next-1"></div>
           </div>
           <div class="swiper-wrapper">
             <div class="swiper-slide">
@@ -627,8 +663,8 @@
     <p class="projects__desc">Предварительные выводы: постоянное информационно-пропагандистское обеспечение нашей деятельности однозначно фиксирует необходимость своевременного выполнения сверхзадачи. А ещё независимые государства смешаны с не уникальными данными до степени совершенной неузнаваемости, из-за чего возрастает их статус бесполезности. Прежде всего, постоянное информационно-пропагандистское <span class="marker"><span class="popup popup1">Пример современных тенденций - современная методология разработки </span><img class="marker__img" src="img/projects/marker1.svg" alt="marker"></span> обеспечение нашей деятельности однозначно фиксирует необходимость экономической целесообразности принимаемых решений. И нет сомнений, что действия представителей оппозиции могут быть рассмотрены <span class="marker"><span class="popup popup2">Приятно, граждане, наблюдать, как сделанные на базе аналитики выводы вызывают у вас эмоции</span><img class="marker__img" src="img/projects/marker1.svg" alt="marker"></span> исключительно в разрезе маркетинговых и финансовых <span class="marker"><span class="popup popup3">В стремлении повысить качество</span><img class="marker__img" src="img/projects/marker1.svg" alt="marker"></span> предпосылок. Банальные, но неопровержимые выводы, а также представители современных социальных резервов призывают нас к новым свершениям, которые, в свою очередь, должны быть смешаны с не уникальными данными до степени совершенной неузнаваемости. Подробнее: <a class="link__transition" href="blanchard-art.ru/projects/about">blanchard-art.ru/projects/about</a></p>
     <h3 class="projects__partners">Партнёры проектов:</h3>
     <div class="projects__btn">
-      <div class="swiper-button-prev-projects slide-btn-effect"></div>
-      <div class="swiper-button-next-projects slide-btn-effect"></div>
+      <div class="swiper-button-prev-1"></div>
+      <div class="swiper-button-next-1"></div>
     </div>
     <div class="swiper-container__projects">
       <div class="swiper-wrapper">
@@ -640,7 +676,6 @@
         <div class="swiper-slide slide"><img class="projects__img" src="img/projects/slide6.png" alt=""></div>
         <div class="swiper-slide slide"><img class="projects__img" src="img/projects/slide7.png" alt=""></div>
         <div class="swiper-slide slide"><img class="projects__img" src="img/projects/slide8.png" alt=""></div>
-
       </div>
     </div>
   </section>
