--- a/Курсовая/index.html
+++ b/Курсовая/index.html
@@ -668,14 +668,14 @@
     </div>
     <div class="swiper-container__projects">
       <div class="swiper-wrapper">
-        <div class="swiper-slide slide"><img class="projects__img" src="img/projects/slide1.png" alt=""></div>
-        <div class="swiper-slide slide"><img class="projects__img" src="img/projects/slide2.png" alt=""></div>
-        <div class="swiper-slide slide"><img class="projects__img" src="img/projects/slide3.png" alt=""></div>
-        <div class="swiper-slide slide"><img class="projects__img" src="img/projects/slide4.png" alt=""></div>
-        <div class="swiper-slide slide"><img class="projects__img" src="img/projects/slide5.png" alt=""></div>
-        <div class="swiper-slide slide"><img class="projects__img" src="img/projects/slide6.png" alt=""></div>
-        <div class="swiper-slide slide"><img class="projects__img" src="img/projects/slide7.png" alt=""></div>
-        <div class="swiper-slide slide"><img class="projects__img" src="img/projects/slide8.png" alt=""></div>
+        <div class="swiper-slide slide"><img class="projects__img" src="img/projects/slide1.webp" alt=""></div>
+        <div class="swiper-slide slide"><img class="projects__img" src="img/projects/slide2.webp" alt=""></div>
+        <div class="swiper-slide slide"><img class="projects__img" src="img/projects/slide3.webp" alt=""></div>
+        <div class="swiper-slide slide"><img class="projects__img" src="img/projects/slide4.webp" alt=""></div>
+        <div class="swiper-slide slide"><img class="projects__img" src="img/projects/slide5.webp" alt=""></div>
+        <div class="swiper-slide slide"><img class="projects__img" src="img/projects/slide6.webp" alt=""></div>
+        <div class="swiper-slide slide"><img class="projects__img" src="img/projects/slide7.webp" alt=""></div>
+        <div class="swiper-slide slide"><img class="projects__img" src="img/projects/slide8.webp" alt=""></div>
       </div>
     </div>
   </section>
