--- a/Курсовая/index.html
+++ b/Курсовая/index.html
@@ -175,15 +175,21 @@
       <h2 class="gallery__title h2">Галерея</h2>
       <div class="gallery__filter">
         <span class="filter__title">Фильтровать по:</span>
-        <select class="gallery__select" name="author">
-          <option value="">Автор</option>
-        </select>
-        <select class="gallery__select" name="author">
-          <option value="">Направление</option>
-        </select>
-        <select class="gallery__select" name="author">
-          <option value="">Техника</option>
-        </select>
+        <div class="gallery__select__block">
+          <select class="gallery__select" name="author">
+            <option value="">Автор</option>
+          </select>
+        </div>
+        <div class="gallery__select__block">
+          <select class="gallery__select" name="direction">
+            <option value="">Направление</option>
+          </select>
+        </div>
+        <div class="gallery__select__block">
+          <select class="gallery__select" name="equipment">
+            <option value="">Техника</option>
+          </select>
+        </div>
       </div>
       <p class="gallery__desc">Вам предоставляется 10 бесплатных скачиваний. Для увеличения количества скачиваний <a class="link__transition" href="#">авторизуйтесь,</a> либо воспользуйтесь лицензией. </p>
       <div class="swiper-container__btn">
