--- a/Курсовая/index.html
+++ b/Курсовая/index.html
@@ -248,6 +248,44 @@
           <div class="swiper-slide slide-img">
             <img src="img/gallery/3-6.webp" alt="">
           </div>
+
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/4-1.jpg" alt="">
+          </div>
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/4-2.jpg" alt="">
+          </div>
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/4-3.jpg" alt="">
+          </div>
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/4-4.jpg" alt="">
+          </div>
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/4-5.jpg" alt="">
+          </div>
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/4-6.jpg" alt="">
+          </div>
+
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/5-1.jpg" alt="">
+          </div>
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/5-2.jpg" alt="">
+          </div>
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/5-3.jpg" alt="">
+          </div>
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/5-4.jpg" alt="">
+          </div>
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/5-5.jpg" alt="">
+          </div>
+          <div class="swiper-slide slide-img">
+            <img src="img/gallery/5-6.jpg" alt="">
+          </div>
         </div>
       </div>
     </div>
