--- a/Курсовая/index.html
+++ b/Курсовая/index.html
@@ -256,35 +256,35 @@
             <img src="img/gallery/4-2.jpg" alt="">
           </div>
           <div class="swiper-slide slide-img">
-            <img src="img/gallery/4-3.jpg" alt="">
+            <img src="img/gallery/4-3.webp" alt="">
           </div>
           <div class="swiper-slide slide-img">
-            <img src="img/gallery/4-4.jpg" alt="">
+            <img src="img/gallery/4-4.webp" alt="">
           </div>
           <div class="swiper-slide slide-img">
-            <img src="img/gallery/4-5.jpg" alt="">
+            <img src="img/gallery/4-5.webp" alt="">
           </div>
           <div class="swiper-slide slide-img">
-            <img src="img/gallery/4-6.jpg" alt="">
+            <img src="img/gallery/4-6.webp" alt="">
           </div>
 
           <div class="swiper-slide slide-img">
-            <img src="img/gallery/5-1.jpg" alt="">
+            <img src="img/gallery/5-1.webp" alt="">
           </div>
           <div class="swiper-slide slide-img">
-            <img src="img/gallery/5-2.jpg" alt="">
+            <img src="img/gallery/5-2.webp" alt="">
           </div>
           <div class="swiper-slide slide-img">
-            <img src="img/gallery/5-3.jpg" alt="">
+            <img src="img/gallery/5-3.webp" alt="">
           </div>
           <div class="swiper-slide slide-img">
-            <img src="img/gallery/5-4.jpg" alt="">
+            <img src="img/gallery/5-4.webp" alt="">
           </div>
           <div class="swiper-slide slide-img">
-            <img src="img/gallery/5-5.jpg" alt="">
+            <img src="img/gallery/5-5.webp" alt="">
           </div>
           <div class="swiper-slide slide-img">
-            <img src="img/gallery/5-6.jpg" alt="">
+            <img src="img/gallery/5-6.webp" alt="">
           </div>
         </div>
       </div>
