--- a/Курсовая/index.html
+++ b/Курсовая/index.html
@@ -758,7 +758,7 @@
   <footer class="footer">
     <div class="footer__content container">
       <a href="#"><img src="img/header/logo.svg" alt="logo" class="footer__logo"></a>
-      <div class="soc-networks">
+      <div class="footer__icon">
         <a class="footer__link" href="#"><img src="img/footer/vk.svg" alt="vk" class="soc-network"></a>
         <a class="footer__link" href="#"><img src="img/footer/instagram.svg" alt="" class="soc-network"></a>
         <a class="footer__link" href="#"><img src="img/footer/fb.svg" alt="" class="soc-network"></a>
